crates/benday-core/tests/snapshots/corpus__case__legend_wrap.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 62,
    "rows": 17
  },
  "plot": {
    "x": 2,
    "y": 2,
    "w": 60,
    "h": 10
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": {
    "text": "legend wraps, never clips",
    "col": 19,
    "row": 0
  },
  "legend": [
    {
      "name": "hot-full-table-scan",
      "color": "#55c4fe",
      "col": 2,
      "row": 14
    },
    {
      "name": "hot-window-projection",
      "color": "#6cd092",
      "col": 27,
      "row": 14
    },
    {
      "name": "wide-50-columns",
      "color": "#eca851",
      "col": 2,
      "row": 15
    },
    {
      "name": "sparse-200-columns",
      "color": "#e698df",
      "col": 23,
      "row": 15
    },
    {
      "name": "ultra-sparse-800",
      "color": "#17d0d8",
      "col": 2,
      "row": 16
    }
  ],
  "y_axis": {
    "domain": [
      2.0,
      8.0
    ],
    "step": 2.0,
    "ticks": [
      {
        "value": 2.0,
        "frac": 0.0,
        "label": "2",
        "row": 11
      },
      {
        "value": 4.0,
        "frac": 0.3333333333333333,
        "label": "4",
        "row": 8
      },
      {
        "value": 6.0,
        "frac": 0.6666666666666666,
        "label": "6",
        "row": 5
      },
      {
        "value": 8.0,
        "frac": 1.0,
        "label": "8",
        "row": 2
      }
    ]
  },
  "x_axis": {
    "categories": null,
    "domain": [
      1.0,
      2.0
    ],
    "tick_cols": [
      0,
      12,
      24,
      35,
      47,
      59
    ],
    "labels": [
      {
        "text": "1.0",
        "col": 1,
        "row": 13
      },
      {
        "text": "1.2",
        "col": 13,
        "row": 13
      },
      {
        "text": "1.4",
        "col": 25,
        "row": 13
      },
      {
        "text": "1.6",
        "col": 36,
        "row": 13
      },
      {
        "text": "1.8",
        "col": 48,
        "row": 13
      },
      {
        "text": "2.0",
        "col": 59,
        "row": 13
      }
    ]
  },
  "marks": [
    {
      "Path": {
        "series": {
          "name": "hot-full-table-scan",
          "color": "#55c4fe"
        },
        "points": [
          [
            0.0,
            1.0
          ],
          [
            1.0,
            0.8333333333333334
          ]
        ]
      }
    },
    {
      "Path": {
        "series": {
          "name": "hot-window-projection",
          "color": "#6cd092"
        },
        "points": [
          [
            0.0,
            0.8333333333333334
          ],
          [
            1.0,
            0.6666666666666667
          ]
        ]
      }
    },
    {
      "Path": {
        "series": {
          "name": "wide-50-columns",
          "color": "#eca851"
        },
        "points": [
          [
            0.0,
            0.6666666666666667
          ],
          [
            1.0,
            0.5
          ]
        ]
      }
    },
    {
      "Path": {
        "series": {
          "name": "sparse-200-columns",
          "color": "#e698df"
        },
        "points": [
          [
            0.0,
            0.5
          ],
          [
            1.0,
            0.33333333333333337
          ]
        ]
      }
    },
    {
      "Path": {
        "series": {
          "name": "ultra-sparse-800",
          "color": "#17d0d8"
        },
        "points": [
          [
            0.0,
            0.33333333333333337
          ],
          [
            1.0,
            0.16666666666666663
          ]
        ]
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "line",
    "x_field": "x",
    "y_field": "y",
    "aggregate": null,
    "series_points": [
      2,
      2,
      2,
      2,
      2
    ],
    "data_source": "inline_values",
    "truncated": null,
    "total_rows": null
  }
}
