crates/benday-core/tests/snapshots/corpus__case__line_single_point.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 76,
    "rows": 15
  },
  "plot": {
    "x": 4,
    "y": 0,
    "w": 72,
    "h": 13
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      3.0,
      4.0
    ],
    "step": 0.5,
    "ticks": [
      {
        "value": 3.0,
        "frac": 0.0,
        "label": "3.0",
        "row": 12
      },
      {
        "value": 3.5,
        "frac": 0.5,
        "label": "3.5",
        "row": 6
      },
      {
        "value": 4.0,
        "frac": 1.0,
        "label": "4.0",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": null,
    "domain": [
      5.0,
      6.0
    ],
    "tick_cols": [
      0,
      14,
      28,
      43,
      57,
      71
    ],
    "labels": [
      {
        "text": "5.0",
        "col": 3,
        "row": 14
      },
      {
        "text": "5.2",
        "col": 17,
        "row": 14
      },
      {
        "text": "5.4",
        "col": 31,
        "row": 14
      },
      {
        "text": "5.6",
        "col": 46,
        "row": 14
      },
      {
        "text": "5.8",
        "col": 60,
        "row": 14
      },
      {
        "text": "6.0",
        "col": 73,
        "row": 14
      }
    ]
  },
  "marks": [
    {
      "Path": {
        "series": {
          "name": null,
          "color": "#00d5ef"
        },
        "points": [
          [
            0.0,
            1.0
          ]
        ]
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "line",
    "x_field": "x",
    "y_field": "y",
    "aggregate": null,
    "series_points": [
      1
    ],
    "data_source": "inline_values",
    "truncated": null,
    "total_rows": null
  }
}
